fixing line spacing in address details, increasing size of address field text

--- a/docroot/sites/all/themes/site_frontend/sass/components/_contact_glossary.scss
+++ b/docroot/sites/all/themes/site_frontend/sass/components/_contact_glossary.scss
@@ -67,16 +67,16 @@
 			/* contact content */
 			h4,
 			h4.node__title {
-				font-size:1.2em;
+				font-size:1.3em;
 				line-height: 1.5em;
 				margin-bottom: 0.5em;
 			}
 			p {
-				margin-bottom: 0.5em;
+				margin-bottom: 0.25em;
 			}
 			.field--name-field-phone-number,
 			.field--name-field-fax {
-				font-size: 1.2em;
+				font-size: 1.3em;
 				line-height: 1.5em;
 				margin-bottom: 0.5em;
 			}
